# RayTracing

./: .gitignore  CMakeLists.txt  README.md  camera.cpp  camera.h  color.h  cube.cpp  cube.h  hittable.h  hittable_list.cpp  hittable_list.h  main.cpp  material.h  ray.h  rtweekend.h  sphere.cpp  sphere.h  vec3.h
Shader/: compute.air  compute.metal  compute.metallib
